--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
 Django==1.7c3
+amqp==1.4.6
+anyjson==0.3.3
 beautifulsoup4==4.3.2
+billiard==3.3.0.18
+celery==3.1.13
 django-redis==3.7.1
 docutils==0.12
+kombu==3.0.21
+nltk==3.0.0b2
 numpy==1.8.2
-redis==2.10.3
 psycopg2==2.5.3
-
+pytz==2014.4
+redis==2.10.3
