supernova starts to work!

--- a/supernova/pagerank/Makefile
+++ b/supernova/pagerank/Makefile
@@ -1,2 +1,2 @@
 iterate_pagerank: src/iterate_pagerank.cpp
-	clang++ -o iterate_pagerank src/iterate_pagerank.cpp -Wextra -Wall -O2 -std=c++11
+	g++ -o iterate_pagerank src/iterate_pagerank.cpp -Wextra -Wall -O2 -std=c++11
